--- a/client-side/package.json
+++ b/client-side/package.json
@@ -11,7 +11,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
@@ -20,7 +19,9 @@
     "parcel": "^2.0.0-beta.2"
   },
   "extends": "@parcel/config-default",
-	"transformers": {
-		"*.jpg": ["@parcel/transformer-raw"]
-	}
+  "transformers": {
+    "*.jpg": [
+      "@parcel/transformer-raw"
+    ]
+  }
 }
